--- a/README
+++ b/README
@@ -1,5 +1,8 @@
 // Install Ubuntu
 sudo apt-get install vim vim-gnome vim-common vim-gui-common
 
+// cloning
+git clone git@github.com:rodrigomilfont/puentoBim.git ~/.vim
+
 // and 
 make
